force-app/main/default/objects/TaxCalculation__c/TaxCalculation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>setting for tax calculation</description>
    <label>Tax Calculation</label>
</CustomObject>