force-app/main/default/objects/TaxCalculation__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>actual interest rate from tax agency</description>
    <inlineHelpText>actual interest rate from tax agency</inlineHelpText>
    <label>Interest Rate</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>