force-app/main/default/objects/TaxCalculation__c/fields/Last_Period_Rate__c.field-meta.xml
<CustomField>
    <fullName>Last_Period_Rate__c</fullName>
    <defaultValue>0.5</defaultValue>
    <description>how much percent of value is lost per month during the last period (after all periods with defined length)</description>
    <inlineHelpText>how much percent of value is lost per month during the last period</inlineHelpText>
    <label>Last Period Rate</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>