force-app/main/default/objects/TaxCalculation__c/fields/Period_1_Length__c.field-meta.xml
<CustomField>
    <fullName>Period_1_Length__c</fullName>
    <defaultValue>3</defaultValue>
    <description>length of the 1st period for assumed value loss calculation in months</description>
    <inlineHelpText>length of the 1st period for assumed value loss calculation in months</inlineHelpText>
    <label>Period 1 Length</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>