force-app/main/default/objects/TaxCalculation__c/fields/Period_1_Rate__c.field-meta.xml
<CustomField>
    <fullName>Period_1_Rate__c</fullName>
    <defaultValue>2</defaultValue>
    <description>how much percent of value is lost per month during the 1st period</description>
    <inlineHelpText>how much percent of value is lost per month during the 1st period</inlineHelpText>
    <label>Period 1 Rate</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>