force-app/main/default/objects/TaxCalculation__c/fields/Period_2_Length__c.field-meta.xml
<CustomField>
    <fullName>Period_2_Length__c</fullName>
    <defaultValue>33</defaultValue>
    <description>length of the 2nd period for assumed value loss calculation in months</description>
    <inlineHelpText>length of the 2nd period for assumed value loss calculation in months</inlineHelpText>
    <label>Period 2 Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>